# order2homebox

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.claude/: settings.json
docs/: PLAN.md  label-layout.md
install/: install-in-lxc.sh  proxmox-install.sh  update.sh
printagent/: pyproject.toml
printagent/deploy/: 99-brother-ql.rules  install-pi.md  install-pi.sh  print-agent.service  update-pi.sh
printagent/printagent/: main.py
server/: .env.example  pyproject.toml
server/app/: __init__.py  auth.py  config.py  cookies.py  encrypt.py  hashpw.py  homebox.py  i18n.py  labels.py  main.py  models.py  printer.py  secrets.py
server/app/locales/: de.json  en.json
server/app/scrapers/: __init__.py  aliexpress.py  amazon.py  banggood.py  base.py  temu.py
server/app/static/: app.css  app.js
server/app/templates/: _item_card.html  _item_result.html  _label_result.html  _location_select.html  base.html  edit.html  index.html  label.html  login.html  result.html  settings.html
server/deploy/: order2homebox.service
server/tests/: conftest.py  test_homebox.py  test_labels.py  test_scrapers.py  test_secrets.py  test_web.py
server/tests/fixtures/: aliexpress_order.html  amazon_order.html  banggood_order.html  temu_order.html
