[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "order2homebox-server"
version = "0.4.0"
description = "Create Homebox items from Amazon/AliExpress/Temu/Banggood orders and print QR labels"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "segno>=1.6",
    "pillow>=10.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "itsdangerous>=2.2",
    "bcrypt>=4.1",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12",
    "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx2>=2.8",  # Starlette's TestClient prefers httpx2; avoids a deprecation warning
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*", "static/*", "locales/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
